# fugu

./: .gitignore  API.md  Cargo.toml  Dockerfile  PERFORMANCE.md  README.md  build.rs
benches/: db_operations_benchmark.rs  large_doc_benchmark.rs  query_benchmark.rs  serialization_benchmark.rs
docs/: Architecture.md  CommandLine.md  Configuration.md  GRPC.md  Glossary.md  Index.md  Indexing.md  Installation.md  Namespaces.md  Overview.md  Performance.md  Searching.md  Security.md  Server.md  WAL.md
docs/images/: COPYRIGHT.md
prompts/: s3_caching.md  tmp.md
proto/: namespace.proto  system.proto
scripts/: analyze_benchmark_results.py  analyze_profile.py  analyze_profiles.py  benchmark_and_view.sh  generate_large_docs.py  instruments_template.tracetemplate  profile_and_analyze.sh  profile_mac.sh  profile_specific.sh  run_both_backends_tests.sh  run_profiling.sh  test_document_statistics.sh  view_flamegraphs.py
src/: cli.rs  db.rs  db_test.rs  document_statistics_test.rs  lib.rs  main.rs  migration.rs  object.rs  query.rs  query_endpoints.rs  query_test.rs  rkyv_adapter.rs  server.rs  test_inverted_index.rs  time_index.rs  tokeinze.rs  tracing_utils.rs
src/cmd/: commands.rs  init.rs  mod.rs  namespaces.rs  util.rs
src/db/: config.rs  core.rs  document.rs  facet.rs  field_config.yaml  mod.rs  schemas.rs  search.rs  utils.rs
src/fugu/: config.rs  grpc.rs  index.rs  mod.rs  node.rs  search_test.rs  server.rs  test.rs  test_client.rs  test_grpc.rs  wal.rs  wal.rs.bak
src/fugu/grpc/: client.rs  error.rs  mod.rs  server.rs  utils.rs
src/fugu/index/: index.rs  mod.rs  parallel_indexer.rs
src/s3/: mod.rs
src/server/: mod.rs  routes.rs  server_main.rs  types.rs
src/server/handlers/: basic.rs  facets.rs  filters.rs  ingest.rs  mod.rs  namespaces.rs  objects.rs  search.rs  utils.rs
tests/: README.md  case_insensitive_search_test.rs  document_cache_test.rs  grpc_tests.rs  hot_cold_loading_tests.rs  lib.rs  main.rs  perf_visualize.py  requirements.txt  run_perf_viz.sh  run_shared_tests.sh  run_tests.sh  search_tests.rs  shared_test_fixture.rs
tests/data/: cold_search_performance.csv  delete_performance.csv  hot_search_performance.csv  insert_performance.csv  integration_delete.csv  integration_index.csv  integration_search.csv  search_performance.csv  server_reload_performance.csv  text_search_performance.csv
