[package]
name = "fugu"
version = "0.1.0"
edition = "2024"

[features]
default = ["json"]
json = ["tracing-subscriber/json"]

[dependencies]
fjall = "2.10.0"
actix-web = "4.10.2"
axum = "0.8.4"
chrono = "0.4.31"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = { version = "^2", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ofilter = { version = "0.4.3", features = ["serde"] }
rkyv = "0.8.10"
urlencoding = "2.1.3"
futures-util = "0.3.31"
anyhow = "1.0.98"
tempfile = "3.20.0"
rand = "0.9.1"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5", features = ["html_reports"] }
byteview = { version = "0.7.0", features = ["serde"] }
