[package]
name = "fugu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fugu"
path = "./src/main.rs"

[features]
default = ["json"]
json = ["tracing-subscriber/json"]

[dependencies]
actix-web = "4.10.2"
axum = "0.8.4"
chrono = "0.4.31"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = { version = "^2", features = ["serde"] }
sled = { version = "0.34.7" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ofilter = { version = "0.4.3", features = ["serde"] }
rkyv = "0.8.10"
urlencoding = "2.1.3"
futures-util = "0.3.31"
anyhow = "1.0.98"
tempfile = "3.20.0"
rand = "0.9.1"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5", features = ["html_reports"] }
fjall = "2.10.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
tantivy = "0.24.1"
aws-sdk-s3 = "1.86.0"
aws-config = "1.6.3"
time = "0.3.41"
paste = "1.0.15"
